--- a/src/components/brew-information/brew-information.component.html
+++ b/src/components/brew-information/brew-information.component.html
@@ -36,30 +36,30 @@
       <ion-row  class="ion-padding-bottom-half">
         <ion-col size="6">
           <ion-label class="card-headline">{{"BREW_DATA_IN_OUT_BR" | translate}}</ion-label><br/>
-          <ion-text *ngIf="brew?.getPreparation().style_type === PREPARATION_STYLE_TYPE.POUR_OVER">
+          <ion-text *ngIf="brew?.getPreparation().style_type !== PREPARATION_STYLE_TYPE.ESPRESSO">
             {{brew?.grind_weight | number : '.0-2'}}gr / {{brew.brew_quantity | number : '.0-2'}}{{brewQuantityEnum[brew?.brew_quantity_type]}}&nbsp;({{brew?.getBrewRatio()}})
           </ion-text>
           <ion-text *ngIf="brew?.getPreparation().style_type === PREPARATION_STYLE_TYPE.ESPRESSO">
             {{brew?.grind_weight | number : '.0-2'}}gr / {{brew.brew_beverage_quantity | number : '.0-2'}}{{brewQuantityEnum[brew?.brew_beverage_quantity_type]}}&nbsp;({{brew?.getBrewRatio()}})
           </ion-text>
         </ion-col>
-        <ion-col *ngIf="settings.brew_time && brew?.brew_time" size="6">
+        <ion-col *ngIf="brew?.brew_time" size="6">
           <ion-label class="card-headline">{{'BREW_DATA_TIME' | translate}}</ion-label><br/>
           <ion-text>{{brew?.getFormattedTotalCoffeeBrewTime()}}</ion-text>
         </ion-col>
 
 
-        <ion-col *ngIf="settings.grind_size === true && brew?.grind_size"  size="6">
+        <ion-col *ngIf="brew?.grind_size != ''"  size="6">
           <ion-label class="card-headline">{{'BREW_DATA_GRIND_SIZE' | translate}}</ion-label><br/>
-          <ion-text>{{brew?.grind_size}}<span *ngIf="settings.mill_speed === true && brew?.mill_speed > 0">&nbsp;@&nbsp;{{ brew?.mill_speed }}</span></ion-text>
+          <ion-text>{{brew?.grind_size}}<span *ngIf="brew?.mill_speed > 0">&nbsp;@&nbsp;{{ brew?.mill_speed }}</span></ion-text>
         </ion-col>
-        <ion-col *ngIf="settings.tds === true &&  brew?.tds > 0 && brew?.brew_beverage_quantity>0"  size="6">
+        <ion-col *ngIf="brew?.tds > 0 && brew?.brew_beverage_quantity>0"  size="6">
           <ion-label class="card-headline">{{'BREW_DATA_TDS_EY' | translate}}</ion-label><br/>
           <ion-text>{{brew?.tds}},&nbsp;%{{brew?.getExtractionYield()}}</ion-text>
         </ion-col>
 
 
-        <ion-col *ngIf="settings.pressure_profile === true && brew?.pressure_profile"  size="6">
+        <ion-col *ngIf="brew?.pressure_profile != ''"  size="6">
           <ion-label class="card-headline">{{'BREW_DATA_PRESSURE_PROFILE' | translate}}</ion-label><br/>
           <ion-text>{{brew?.pressure_profile}}</ion-text>
         </ion-col>
